--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,4 +8,5 @@
 </head>
 <body>
     <p>Esse é meu primeiro site!</p>  
+    <p>Estou adicionando um novo texto para fazer o teste de deploy</p>
 </html>
